--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#Config database
+spring.datasource.url=jdbc:mysql://localhost:3306/web_search
+spring.datasource.username=spring
+spring.datasource.password=spring
+
+#auto create table
+spring.jpa.hibernate.ddl-auto=update
+
+#config sending email to activate account
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dungrunggiung@gmail.com
+spring.mail.password=bchmxfvaeuswpkut
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 
