--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Config database
 spring.datasource.url=jdbc:mysql://localhost:3306/web_search
-spring.datasource.username=spring
-spring.datasource.password=spring
+spring.datasource.username=root
+spring.datasource.password=
 
 #auto create table
 spring.jpa.hibernate.ddl-auto=update
